--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <header style="background-color: antiquewhite;">
         <h1>THIS IS HEADER</h1>
+        <h2>This is correction<h2>
     </header>
     <hr>
     <div class="container" style="background-color:aqua;">
