--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
     <hr>
     <footer style="background-color: antiquewhite;">
         <div class="footer">
+            <main>
             <div class="footer-heading">
                 <h2>This is Footer</h2>
-            </div>    
+            </div>   
+            </main> 
             <div class="footer-copyright">
             &copy 2009-2023   
             </div>
-            <i class="bi bi-youtube"></i>
+            <section>
             <div class="footer_socialmedia">
                 <ul>
                     <li><img src="assests/image/youtube.svg" alt=""> Youtube</li>
@@ -61,6 +63,7 @@
                     <li><img src="assests/image/instagram.svg" alt=""> Instagram</li>
                 </ul>
             </div>
+            </section>
         </div>
     </footer>
 </body>
